src/main/java/com/example/etstur_java_backend/error/UserAlreadyExistsException.java
package com.example.etstur_java_backend.error;

public class UserAlreadyExistsException extends RuntimeException {
    public UserAlreadyExistsException() {
        super("Username already exists");
    }
}
